--- a/pages/popup/src/Suggestion.css
+++ b/pages/popup/src/Suggestion.css
@@ -35,7 +35,7 @@
   background-color: #fff;
   border-bottom-left-radius: 0.5rem;
   border-bottom-right-radius: 0.5rem;
-  max-height: 200px;
+  max-height: 20rem;
   overflow-y: auto;
   overflow-x: hidden;
 }
